lib/y_dart/ffi/y_dart_bindings_generated.dart


/// Inserts a null-terminated UTF-8 encoded string a given `index`. `index` value must be between
/// 0 and a length of a `YText` (inclusive, accordingly to [ytext_len] return value), otherwise this
/// function will panic.
///
/// A `str` parameter must be a null-terminated UTF-8 encoded string. This function doesn't take
/// ownership over a passed value - it will be copied and therefore a string parameter must be
/// released by the caller.
///
/// A nullable pointer with defined `attrs` will be used to wrap provided text with
/// a formatting blocks. `attrs` must be a map-like type.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Uint32, ffi.Pointer<ffi.Char>, ffi.Pointer<YInput>)>(
    symbol: 'ytext_insert', assetId: 'package:y_dart/y_dart')
external void ytext_insert(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  int index,
  ffi.Pointer<ffi.Char> value,
  ffi.Pointer<YInput> attrs,
);

/// Wraps an existing piece of text within a range described by `index`-`len` parameters with
/// formatting blocks containing provided `attrs` metadata. `attrs` must be a map-like type.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Uint32, ffi.Uint32, ffi.Pointer<YInput>)>(
    symbol: 'ytext_format', assetId: 'package:y_dart/y_dart')
external void ytext_format(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  int index,
  int len,
  ffi.Pointer<YInput> attrs,
);

/// Inserts an embed content given `index`. `index` value must be between 0 and a length of a
/// `YText` (inclusive, accordingly to [ytext_len] return value), otherwise this
/// function will panic.
///
/// A `str` parameter must be a null-terminated UTF-8 encoded string. This function doesn't take
/// ownership over a passed value - it will be copied and therefore a string parameter must be
/// released by the caller.
///
/// A nullable pointer with defined `attrs` will be used to wrap provided text with
/// a formatting blocks. `attrs` must be a map-like type.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Uint32, ffi.Pointer<YInput>, ffi.Pointer<YInput>)>(
    symbol: 'ytext_insert_embed', assetId: 'package:y_dart/y_dart')
external void ytext_insert_embed(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  int index,
  ffi.Pointer<YInput> content,
  ffi.Pointer<YInput> attrs,
);

/// Performs a series of changes over the given `YText` shared ref type, described by the `delta`
/// parameter:
///
/// - Deltas constructed with `ydelta_input_retain` will move cursor position by the given number
/// of elements. If formatting attributes were defined, all elements skipped over this way will be
/// wrapped by given formatting attributes.
/// - Deltas constructed with `ydelta_input_delete` will tell cursor to remove a corresponding
/// number of elements.
/// - Deltas constructed with `ydelta_input_insert` will tell cursor to insert given elements into
/// current cursor position. While these elements can be of any type (used for embedding ie.
/// shared types or binary payload like images), for the text insertion a `yinput_string`
/// is expected. If formatting attributes were specified, inserted elements will be wrapped by
/// given formatting attributes.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Pointer<YDeltaIn>, ffi.Uint32)>(
    symbol: 'ytext_insert_delta', assetId: 'package:y_dart/y_dart')
external void ytext_insert_delta(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<YDeltaIn> delta,
  int delta_len,
);

/// Creates a parameter for `ytext_insert_delta` function. This parameter will move cursor position
/// by the `len` of elements. If formatting `attrs` were defined, all elements skipped over this
/// way will be wrapped by given formatting attributes.
@ffi.Native<YDeltaIn Function(ffi.Uint32, ffi.Pointer<YInput>)>(
    symbol: 'ydelta_input_retain', assetId: 'package:y_dart/y_dart')
external YDeltaIn ydelta_input_retain(
  int len,
  ffi.Pointer<YInput> attrs,
);

/// Creates a parameter for `ytext_insert_delta` function. This parameter will tell cursor to remove
/// a corresponding number of elements, starting from current cursor position.
@ffi.Native<YDeltaIn Function(ffi.Uint32)>(
    symbol: 'ydelta_input_delete', assetId: 'package:y_dart/y_dart')
external YDeltaIn ydelta_input_delete(
  int len,
);

/// Creates a parameter for `ytext_insert_delta` function. This parameter will tell cursor to insert
/// given elements into current cursor position. While these elements can be of any type (used for
/// embedding ie. shared types or binary payload like images), for the text insertion a `yinput_string`
/// is expected. If formatting attributes were specified, inserted elements will be wrapped by
/// given formatting attributes.
@ffi.Native<YDeltaIn Function(ffi.Pointer<YInput>, ffi.Pointer<YInput>)>(
    symbol: 'ydelta_input_insert', assetId: 'package:y_dart/y_dart')
external YDeltaIn ydelta_input_insert(
  ffi.Pointer<YInput> data,
  ffi.Pointer<YInput> attrs,
);

/// Removes a range of characters, starting a a given `index`. This range must fit within the bounds
/// of a current `YText`, otherwise this function call will fail.
///
/// An `index` value must be between 0 and the length of a `YText` (exclusive, accordingly to
/// [ytext_len] return value).
///
/// A `length` must be lower or equal number of characters (counted as UTF chars depending on the
/// encoding configured by `YDoc`) from `index` position to the end of of the string.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Uint32, ffi.Uint32)>(
    symbol: 'ytext_remove_range', assetId: 'package:y_dart/y_dart')
external void ytext_remove_range(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
  int index,
  int length,
);

/// Returns a number of elements stored within current instance of `YArray`.
@ffi.Native<ffi.Uint32 Function(ffi.Pointer<Branch>)>(
    symbol: 'yarray_len', assetId: 'package:y_dart/y_dart')
external int yarray_len(
  ffi.Pointer<Branch> array,
);

/// Returns a pointer to a `YOutput` value stored at a given `index` of a current `YArray`.
/// If `index` is outside the bounds of an array, a null pointer will be returned.
///
/// A value returned should be eventually released using [youtput_destroy] function.
@ffi.Native<
    ffi.Pointer<YOutput> Function(
        ffi.Pointer<Branch>,
        ffi.Pointer<YTransaction>,
        ffi.Uint32)>(symbol: 'yarray_get', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YOutput> yarray_get(
  ffi.Pointer<Branch> array,
  ffi.Pointer<YTransaction> txn,
  int index,
);

/// Returns a UTF-8 encoded, NULL-terminated JSON string representing a value stored in a current
/// YArray under a given index.
///
/// This method will return `NULL` pointer if value was outside the bound of an array or couldn't be
/// serialized into JSON string.
///
/// This method will also try to serialize complex types that don't have native JSON representation
/// like YMap, YArray, YText etc. in such cases their contents will be materialized into JSON values.
///
/// A string returned should be eventually released using [ystring_destroy] function.
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, ffi.Uint32)>(
    symbol: 'yarray_get_json', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> yarray_get_json(
  ffi.Pointer<Branch> array,
  ffi.Pointer<YTransaction> txn,
  int index,
);

/// Inserts a range of `items` into current `YArray`, starting at given `index`. An `items_len`
/// parameter is used to determine the size of `items` array - it can also be used to insert
/// a single element given its pointer.
///
/// An `index` value must be between 0 and (inclusive) length of a current array (use [yarray_len]
/// to determine its length), otherwise it will panic at runtime.
///
/// `YArray` doesn't take ownership over the inserted `items` data - their contents are being copied
/// into array structure - therefore caller is responsible for freeing all memory associated with
/// input params.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Uint32, ffi.Pointer<YInput>, ffi.Uint32)>(
    symbol: 'yarray_insert_range', assetId: 'package:y_dart/y_dart')
external void yarray_insert_range(
  ffi.Pointer<Branch> array,
  ffi.Pointer<YTransaction> txn,
  int index,
  ffi.Pointer<YInput> items,
  int items_len,
);

/// Removes a `len` of consecutive range of elements from current `array` instance, starting at
/// a given `index`. Range determined by `index` and `len` must fit into boundaries of an array,
/// otherwise it will panic at runtime.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Uint32, ffi.Uint32)>(
    symbol: 'yarray_remove_range', assetId: 'package:y_dart/y_dart')
external void yarray_remove_range(
  ffi.Pointer<Branch> array,
  ffi.Pointer<YTransaction> txn,
  int index,
  int len,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<Branch>,
        ffi.Pointer<YTransaction>,
        ffi.Uint32,
        ffi.Uint32)>(symbol: 'yarray_move', assetId: 'package:y_dart/y_dart')
external void yarray_move(
  ffi.Pointer<Branch> array,
  ffi.Pointer<YTransaction> txn,
  int source,
  int target,
);

/// Returns an iterator, which can be used to traverse over all elements of an `array` (`array`'s
/// length can be determined using [yarray_len] function).
///
/// Use [yarray_iter_next] function in order to retrieve a consecutive array elements.
/// Use [yarray_iter_destroy] function in order to close the iterator and release its resources.
@ffi.Native<
        ffi.Pointer<YArrayIter> Function(
            ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'yarray_iter', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YArrayIter> yarray_iter(
  ffi.Pointer<Branch> array,
  ffi.Pointer<YTransaction> txn,
);

/// Releases all of an `YArray` iterator resources created by calling [yarray_iter].
@ffi.Native<ffi.Void Function(ffi.Pointer<YArrayIter>)>(
    symbol: 'yarray_iter_destroy', assetId: 'package:y_dart/y_dart')
external void yarray_iter_destroy(
  ffi.Pointer<YArrayIter> iter,
);

/// Moves current `YArray` iterator over to a next element, returning a pointer to it. If an iterator
/// comes to an end of an array, a null pointer will be returned.
///
/// Returned values should be eventually released using [youtput_destroy] function.
@ffi.Native<ffi.Pointer<YOutput> Function(ffi.Pointer<YArrayIter>)>(
    symbol: 'yarray_iter_next', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YOutput> yarray_iter_next(
  ffi.Pointer<YArrayIter> iterator,
);

/// Returns an iterator, which can be used to traverse over all key-value pairs of a `map`.
///
/// Use [ymap_iter_next] function in order to retrieve a consecutive (**unordered**) map entries.
/// Use [ymap_iter_destroy] function in order to close the iterator and release its resources.
@ffi.Native<
        ffi.Pointer<YMapIter> Function(
            ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'ymap_iter', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YMapIter> ymap_iter(
  ffi.Pointer<Branch> map,
  ffi.Pointer<YTransaction> txn,
);

/// Releases all of an `YMap` iterator resources created by calling [ymap_iter].
@ffi.Native<ffi.Void Function(ffi.Pointer<YMapIter>)>(
    symbol: 'ymap_iter_destroy', assetId: 'package:y_dart/y_dart')
external void ymap_iter_destroy(
  ffi.Pointer<YMapIter> iter,
);
